--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>ECOTIME</title>
-    <link rel="canonical" href="https://simplepwa.com" />
+    <link rel="canonical" href="https://ecotime.app#" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="apple-touch-icon"
@@ -31,39 +31,30 @@
     <meta name="msapplication-config" content="./browserconfig.xml" />
     <meta name="theme-color" content="#000000" />
 
-    <meta
-      name="description"
-      content="Simple Progressive Web App (PWA) template"
-    />
+    <meta name="description" content="Energy CO2 data" />
     <meta name="robots" content="noodp" />
-    <meta name="author" content="Nicole Furlan" />
+    <meta name="author" content="Yelle LIeder" />
     <meta
       name="keywords"
-      content="progressive web app, progressive web application, pwa, pwa progressive web app, pwa progressive web application, progressive app, basic progressive web app, basic progressive web application, basic pwa, example progressive web app, example progressive web application, example pwa, progressive web app basic, progressive web app builder, progressive web app example, progressive web app sample, progressive web app template, sample progressive web app, sample progressive web application, sample pwa, free progressive web application template, progressive web application template, progressive web app template free, progressive web app template free download, progressive web app html template, progressive web app template github"
+      content="energy, co2, carbon, footprint, climate, change, global, warming, electricity, map, api, real, time, realtime, data, information, app, pwa, progressive, web, application, webapp, webapplication, web-app, web-applicat"
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Simple PWA" />
-    <meta
-      property="og:description"
-      content="Simple Progressive Web App (PWA) template"
-    />
-    <meta property="og:url" content="https://simplepwa.com" />
-    <meta property="og:site_name" content="Simple PWA" />
+    <meta property="og:title" content="ECOTIME" />
+    <meta property="og:description" content="Energy CO2 data" />
+    <meta property="og:url" content="https://ecotime.app" />
+    <meta property="og:site_name" content="ECOTIME" />
     <meta
       property="section:publisher"
-      content="https://www.facebook.com/simplepwa/"
+      content="https://www.facebook.com/ecotime/"
     />
-    <meta property="og:image" content="https://simplepwa.com/share.jpg" />
+    <meta property="og:image" content="https://ecotime.app/share.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Simple PWA" />
-    <meta
-      name="twitter:description"
-      content="Simple Progressive Web App (PWA) template"
-    />
-    <meta name="twitter:site" content="@simplepwa" />
-    <meta name="twitter:image" content="https://simplepwa.com/share.jpg" />
-    <meta name="twitter:creator" content="@nicolemfurlan" />
+    <meta name="twitter:title" content="ECOTIME" />
+    <meta name="twitter:description" content="Energy CO2 data" />
+    <meta name="twitter:site" content="@ecotime" />
+    <meta name="twitter:image" content="https://ecotime.app#/share.jpg" />
+    <meta name="twitter:creator" content="@ecotime" />
     <link rel="stylesheet" href="style.css" />
     <script>
       if ("serviceWorker" in navigator) {
@@ -130,7 +121,7 @@
       </div>
 
       <div class="container">
-        <h2 id="what">What does it mean?</h2>
+        <!-- <h2 id="what">What does it mean?</h2> -->
         <p id="explanation"></p>
 
         <h2 id="what">How to use it?</h2>
@@ -186,13 +177,6 @@
           |
           <a href="https://yel.li/legal" target="_blank" rel="noopener nofollow"
             >Imprint</a
-          >
-          |
-          <a
-            href="https://github.com/nikkifurls/simplepwa"
-            target="_blank"
-            rel="noopener nofollow"
-            >PWA Template</a
           >
         </p>
       </div>
