--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>ECOTIME</title>
-    <link rel="canonical" href="https://ecotime.app#" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="apple-touch-icon"
@@ -23,6 +22,7 @@
       sizes="16x16"
       href="./favicon-16x16.png"
     />
+    <link rel="canonical" href="https://ecotime.app/index.html" />
     <link rel="manifest" href="./manifest.json" />
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#000000" />
     <link rel="shortcut icon" href="./favicon.ico" />
@@ -67,7 +67,6 @@
         window.addEventListener("beforeinstallprompt", (e) => {
           e.preventDefault();
           deferredPrompt = e;
-          // Delay the prompt by 15 seconds
           setTimeout(showInstallPrompt, 5000);
         });
 
@@ -103,7 +102,7 @@
           aria-label="Logo"
           style="margin-right: 20px"
         >
-          <img src="logo.png" alt="Logo" style="width: 50px; height: 50px" />
+          <img src="logo.png" alt="Logo" style="width: 40px; height: 40px" />
         </a>
         <h1>ecotime</h1>
       </div>
