--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <p>
           &copy; 2023 Yelle Lieder. All rights reserved. |
           <a
-            href="https://github.com/yellelieder"
+            href="https://github.com/yellelieder/ecotime.app"
             target="_blank"
             rel="noopener nofollow"
             >GitHub</a
